--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,8 @@
                 "reveal": "always",
                 "panel": "new",
                 "focus": true
-            }
+            },
+            "problemMatcher": []
         },
         {
             "taskName": "nosetest",
